# legal-mask

./: .gitignore  README.en.md  README.md  build.bat  build.py  legal-mask.spec  pyproject.toml  requirements.txt
examples/: 测试文档-法律文书脱敏测试.docx
legal_mask/: __main__.py  cli.py  config.py  run.py  server.py  types.py
legal_mask/api/: annotations.py  documents.py  export.py  router.py  settings.py
legal_mask/detectors/: keyword_matcher.py  ner_model.py  rule_engine.py
legal_mask/document_parsers/: __init__.py  base.py  docx_parser.py  excel_parser.py  pdf_parser.py  text_parser.py
legal_mask/engine/: annotator.py  exporter.py  masker.py
legal_mask/frontend/: index.html  package-lock.json  package.json  vite.config.ts
legal_mask/frontend/src/: App.vue  main.ts
legal_mask/frontend/src/api/: index.ts
legal_mask/frontend/src/stores/: document.ts
legal_mask/frontend/src/types/: index.ts
legal_mask/frontend/src/views/: Review.vue  Settings.vue  Workspace.vue
legal_mask/static/: index.html
legal_mask/static/assets/: index-8hlrqFpw.css  index-BaEpQKkR.js  index-BjXwKUPZ.js  index-BssPCWMz.js  index-C5Bcy64a.js  index-CgQqtZnb.css  index-DjellKpq.css  index-SQe1YRg-.css
static/: index.html
tests/: conftest.py  test_annotator.py  test_docx_parser.py  test_exporter.py  test_keyword_matcher.py  test_masker.py  test_ner_model.py  test_rule_engine.py
